ocp-resources/service-mqspring-d.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gkovan/mqspring
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2021-04-01T18:12:14Z"
  labels:
    app: mqspring-d
    app.kubernetes.io/component: mqspring-d
    app.kubernetes.io/instance: mqspring-d
    app.kubernetes.io/name: java
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:app.openshift.io/vcs-ref: {}
          f:app.openshift.io/vcs-uri: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
          f:app.openshift.io/runtime: {}
          f:app.openshift.io/runtime-version: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":8443,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":8778,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
          f:deploymentconfig: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Mozilla
    operation: Update
    time: "2021-04-01T18:12:14Z"
  name: mqspring-d
  namespace: java-test
  resourceVersion: "955024"
  selfLink: /api/v1/namespaces/java-test/services/mqspring-d
  uid: 3ef53a18-36b4-4fff-8f3a-85257d489b5a
spec:
  clusterIP: 172.21.234.216
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: mqspring-d
    deploymentconfig: mqspring-d
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
